test/typecheck/fail/empty_vector_infer.sail
default Order dec

$include <prelude.sail>

val main : unit -> unit

function main() = {
    let _ = [];
    ()
}